# gate_server

./: .gitignore  README.md  test.py  worktree_test.md
backup/: CMakeLists.txt
backup/bev_pool_v2/: test.cpp
python/: print.py  sss_simp.onnx  test.py
ros/d2lros2/chapter2/basic/: CMakeLists.txt  first_ros2_node.cpp  second_ros2_node.py
ros/d2lros2/chapter2/colcon_test_ws/install/: local_setup.sh  setup.sh
ros/d2lros2/chapter2/colcon_test_ws/install/example_cpp/lib/example_cpp/: node_01
ros/d2lros2/chapter2/colcon_test_ws/install/example_cpp/share/example_cpp/: local_setup.sh  package.sh
ros/d2lros2/chapter2/colcon_test_ws/install/examples_rclcpp_async_client/lib/examples_rclcpp_async_client/: client_main
ros/d2lros2/chapter2/colcon_test_ws/install/examples_rclcpp_async_client/share/examples_rclcpp_async_client/: package.sh
ros/d2lros2/chapter2/colcon_test_ws/install/examples_rclcpp_cbg_executor/lib/examples_rclcpp_cbg_executor/: ping  ping_pong  pong
ros/d2lros2/chapter2/colcon_test_ws/install/examples_rclcpp_cbg_executor/share/examples_rclcpp_cbg_executor/: local_setup.sh  package.sh
ros/d2lros2/chapter2/colcon_test_ws/install/examples_rclcpp_minimal_action_client/lib/examples_rclcpp_minimal_action_client/: action_client_member_functions  action_client_not_composable  action_client_not_composable_with_cancel  action_client_not_composable_with_feedback
ros/d2lros2/chapter2/colcon_test_ws/log/: latest_build
ros/d2lros2/chapter2/colcon_test_ws/src/example_cpp/: package.xml
ros/d2lros2/chapter2/colcon_test_ws/src/example_cpp/src/: node_01.cpp
(+59 files in other folders)
